Add Toggle Zoom mode feature

--- a/final-installation/VBA-files-Danh-Tools-Installation/Classes/ModeController.cls
+++ b/final-installation/VBA-files-Danh-Tools-Installation/Classes/ModeController.cls
@@ -13,25 +13,52 @@ Option Explicit
 Private info As InfoConstants
 Private system As SystemUpdate
 Private userResponse As VbMsgBoxResult
+Private app As Application
+Attribute app.VB_VarHelpID = -1
+Private wd As Window
+Private wb As Workbook
+Attribute wb.VB_VarHelpID = -1
+Private ws As Worksheet
+Attribute ws.VB_VarHelpID = -1
 
 'Constructor
 Private Sub Class_Initialize()
     Set info = New InfoConstants
     Set system = New SystemUpdate
 End Sub
+
 'Destructor
 Private Sub Class_Terminate()
     Set info = Nothing
     Set system = Nothing
 End Sub
 
-Public Sub toggleZenMode()
+'Initialize Variables
+Private Function hasVariables() As Boolean
 On Error GoTo ErrorHandle
     Set info = New InfoConstants
     Set system = New SystemUpdate
+    If Not system.hasWorkPlace(hasMsg:=True, workPlaceType:="Window") Then
+        Let hasVariables = False
+        GoTo ExecuteProcedure
+    End If
+    Set app = system.app
+    Set wd = system.wd
+    Set wb = system.wb
+    Set ws = system.ws
+    Let hasVariables = True
+    GoTo ExecuteProcedure
+ErrorHandle:
+    Call system.tackleErrors
+ExecuteProcedure:
+End Function
+
+Public Sub toggleZenMode()
+On Error GoTo ErrorHandle
+    If Not hasVariables Then GoTo ExecuteProcedure
     Call system.speedOn
-    Dim isZen As Boolean:  Let isZen = Not ActiveWindow.DisplayHorizontalScrollBar
-    With ActiveWindow
+    Dim isZen As Boolean:  Let isZen = Not wd.DisplayHorizontalScrollBar
+    With wd
         .DisplayHeadings = isZen
         .DisplayWorkbookTabs = isZen
         .DisplayRuler = isZen
@@ -40,7 +67,7 @@ On Error GoTo ErrorHandle
         .DisplayHorizontalScrollBar = isZen
         .DisplayVerticalScrollBar = isZen
     End With
-    With Application
+    With app
         .ExecuteExcel4Macro "show.toolbar(""Ribbon""," & isZen & ")"
         .DisplayStatusBar = isZen
         .DisplayFormulaBar = isZen
@@ -55,10 +82,14 @@ ExecuteProcedure:
     Call system.speedOff
 End Sub
 
-Public Sub toggleViewMode()
+Public Sub toggleZoomMode()
 On Error GoTo ErrorHandle
+    If Not hasVariables Then GoTo ExecuteProcedure
+    With wd
+        If .Zoom = 100 Then .Zoom = True Else .Zoom = 100
+        ' .Zoom = IIf(.Zoom = 100, True, 100) ' Shortage way
+    End With
 GoTo ExecuteProcedure
-    'TODO: toggle zoom view Readme.md > Trello for information
 ErrorHandle:
     Call system.tackleErrors
 ExecuteProcedure:
